fix main layout issues

--- a/style.css
+++ b/style.css
@@ -1040,3 +1040,16 @@ h4 {
         text-align: center;
     }
 }
+
+#quote, #quote-signature {
+    font-size: 16px;
+}
+
+#quote{
+    font-weight: 600;
+}
+
+#form-container {
+    margin-left: auto;
+    margin-right: auto;
+}
